tiny modifications to fix data acquisition

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "REMOTE, LOCAL = \"REMOTE\", \"LOCAL\"\n",
     "MODES = {\n",
-    "    \"REMOTE\": \"Execute on Google Colab. Get data and files from Github repositories.\",\n",
-    "    \"LOCAL\": \"Execute locally. Takes data from local folder.\"\n",
+    "    \"REMOTE\": \"Get data and files from Github repositories.\",\n",
+    "    \"LOCAL\": \"Takes data from local folder.\"\n",
     "}"
    ]
   },
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv mlvm-project/scripts/create_labels/images data"
+    "!mv mlvm-project/scripts/create_labels/images_data"
    ]
   },
   {
