fix: notebooks cleanup, launch not tested yet

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -6,11 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "REMOTE, LOCAL = \"REMOTE\", \"LOCAL\"\n",
-    "MODES = {\n",
-    "    \"REMOTE\": \"Get data and files from Github repositories.\",\n",
-    "    \"LOCAL\": \"Takes data from local folder.\"\n",
-    "}"
+    "!git config --global core.compression 0\n",
+    "!git config --global pack.windowMemory 100m\n",
+    "!git config --global pack.packSizeLimit 100m\n",
+    "!git config --global index.threads 4"
    ]
   },
   {
@@ -19,7 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode = REMOTE"
+    "!git clone https://github.com/MicheleCazzola/mlvm-dataset --depth=1 mlvm-dataset --progress --verbose\n",
+    "!cd mlvm-dataset; git pull --all\n",
+    "\n",
+    "!cd mlvm-dataset; git status"
    ]
   },
   {
@@ -28,8 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if mode == REMOTE:\n",
-    "    !git clone https://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@github.com/MicheleCazzola/mvlm-project.git"
+    "!git clone https://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@github.com/MicheleCazzola/mvlm-project.git mlvm-project\n",
+    "\n",
+    "!cd mlvm-dataset; git status"
    ]
   },
   {
@@ -38,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv mlvm-project/scripts/create_labels/images_data"
+    "!mv mlvm-dataset mlvm-project/data"
    ]
   },
   {
@@ -47,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd mlvm-dataset"
+    "!ls -la mlvm-project/data"
    ]
   },
   {
@@ -56,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt"
+    "!cd mlvm-project/data; sed -i 's/\\\\/\\//g' train.txt; sed -i 's/\\\\/\\//g' test.txt; sed -i 's/artist_dataset\\///g' train.txt; sed -i 's/artist_dataset\\///g' test.txt;"
    ]
   },
   {
@@ -65,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import main"
+    "!cd mlvm-project; chmod u+x stats.py; python stats.py data/artist_dataset"
    ]
   }
  ],
