fix: change check for dataloader and bug fix

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd mlvm-project; chmod u+x stats.py; python stats.py data/artist_dataset"
+    "!cd mlvm-project; chmod u+x main.py; python main.py data/artist_dataset"
    ]
   }
  ],
