--- a/colab/arch_complete_lab.ipynb
+++ b/colab/arch_complete_lab.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "id": "fObRp4FuSCOt"
@@ -188,15 +195,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-        "model = MultibranchNetwork(out_classes = 161, use_stn=True)"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "B4II4m3nT0NV"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "model = MultibranchNetwork(out_classes = 161, use_stn=True)"
+      ]
     },
     {
       "cell_type": "code",
@@ -221,14 +228,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "45670021"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -237,9 +244,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pytorch_memlab"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -247,11 +252,10 @@
         "id": "s8cPSvoLSTJ0",
         "outputId": "3d131336-5935-4c92-e13d-4178c3188d71"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pytorch_memlab in /usr/local/lib/python3.10/dist-packages (0.3.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from pytorch_memlab) (75.1.0)\n",
@@ -273,6 +277,9 @@
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.4->pytorch_memlab) (3.0.2)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install pytorch_memlab"
       ]
     },
     {
@@ -286,14 +293,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = model.to(DEVICE)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "7XYM4AV4T7Y6"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model = model.to(DEVICE)"
+      ]
     },
     {
       "cell_type": "code",
@@ -319,32 +326,23 @@
         "\n",
         "        loss = criterion(outputs, labels)\n",
         "        loss.backward()\n",
-        "        optimizer.step()\n",
-        ""
+        "        optimizer.step()\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "torch.cuda.empty_cache()"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "1fAbXBf1ZpNJ"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "torch.cuda.empty_cache()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from pytorch_memlab import MemReporter\n",
-        "x = torch.randn(32, 3, 512, 512).to(DEVICE)\n",
-        "with torch.no_grad():\n",
-        "    r = model(x)\n",
-        "\n",
-        "m = MemReporter()\n",
-        "m.report()"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -352,11 +350,10 @@
         "id": "9XIofGbVaGs0",
         "outputId": "058af901-3639-4d9a-ab7f-62d390dd4476"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/pytorch_memlab/mem_reporter.py:65: FutureWarning: `torch.distributed.reduce_op` is deprecated, please use `torch.distributed.ReduceOp` instead\n",
             "  tensors = [obj for obj in objects if isinstance(obj, torch.Tensor)]\n",
@@ -365,8 +362,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Element type                                            Size  Used MEM\n",
             "-------------------------------------------------------------------------------\n",
@@ -3076,10 +3073,24 @@
             "-------------------------------------------------------------------------------\n"
           ]
         }
+      ],
+      "source": [
+        "from pytorch_memlab import MemReporter\n",
+        "x = torch.randn(32, 3, 512, 512).to(DEVICE)\n",
+        "with torch.no_grad():\n",
+        "    r = model(x)\n",
+        "\n",
+        "m = MemReporter()\n",
+        "m.report()"
       ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -3095,12 +3106,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.8"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
