fix: added script for resources computation

--- a/colab/resources.ipynb
+++ b/colab/resources.ipynb
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "!mv mlmv-project/script/times/times.py mlvm-project"
+    "!mv mlvm-project/scripts/resources/resources.py mlvm-project"
    ]
   },
   {
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "!cd mlvm-project; chmod u+x times.py; python times.py"
+    "!cd mlvm-project; chmod u+x resources.py; python resources.py"
    ]
   }
  ],
