fix: added snippet launch notebook

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -68,6 +68,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install torchmetrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!cd mlvm-project; chmod u+x main.py; python main.py data/artist_dataset"
    ]
   }
