fix: updated HOG-based classifier

--- a/colab/classifier.ipynb
+++ b/colab/classifier.ipynb
@@ -105,6 +105,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install torchmetrics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "EaVw-MRHmiGd",
         "vscode": {
@@ -114,18 +123,6 @@
       "outputs": [],
       "source": [
         "! cd mlvm-project; chmod u+x stats.py; python classifier.py data/artist_dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "uWG7oQNVy4IR"
-      },
-      "outputs": [],
-      "source": [
-        "!mv mlvm-project/stats.py mlvm-project/scripts/stats/\n",
-        "!mv mlvm-project/stats.json mlvm-project/scripts/stats/"
       ]
     }
   ],
