small fix in HOG classifier notebook

--- a/colab/classifier.ipynb
+++ b/colab/classifier.ipynb
@@ -122,7 +122,7 @@
       },
       "outputs": [],
       "source": [
-        "! cd mlvm-project; chmod u+x stats.py; python classifier.py data/artist_dataset"
+        "! cd mlvm-project; chmod u+x classifier.py; python classifier.py data/artist_dataset"
       ]
     }
   ],
