feat: project refactor TODO: fix scripts compatibility

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "!git clone https://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@github.com/MicheleCazzola/mvlm-project.git mlvm-project\n",
     "\n",
-    "!cd mlvm-dataset; git status"
+    "!cd mlvm-project; git status"
    ]
   },
   {
