added results for resnet backbone

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,20 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "from torch import tensor\n",
+    "from torchmetrics.classification import MulticlassAccuracy\n",
+    "from src.trainer.metrics import Metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.6667)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cv2.cuda.getCudaEnabledDeviceCount()"
+    "target = tensor([2, 2, 1, 0, 0])\n",
+    "preds = tensor([2, 1, 1, 0, 1])\n",
+    "metric = Metrics(3, 1).mca\n",
+    "metric.update(preds, target)\n",
+    "metric.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 0, 0]), tensor([1, 1, 1]), tensor([0, 1, 0]), tensor([2, 2, 3]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric.fn, metric.tp, metric.fp, metric.tn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.7500)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(metric.tp.sum()) / (metric.tp.sum() + metric.fn.sum())"
    ]
   }
  ],
