feat: added weight option for CE loss

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -79,6 +79,25 @@
    "source": [
     "!cd mlvm-project; chmod u+x main.py; python main.py data/artist_dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!p=$(find mlvm-project -maxdepth 1 -mindepth 1 -type d -name '202*'); cp -r ./mlvm-project/temp/ $p; cp -r $p /content/drive/MyDrive/mlvm_shared/; echo $p"
+   ]
   }
  ],
  "metadata": {
