--- a/playground.ipynb
+++ b/playground.ipynb
@@ -476,6 +476,76 @@
     "plt.legend()\n",
     "plt.grid()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([7, 2, 9, 4, 3, 6], [8, 1, 5, 0])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = list(range(10))\n",
+    "y = list(range(3)) * 3 + [2]\n",
+    "X_train, X_test = train_test_split(\n",
+    "    X, test_size=0.4, random_state=42, shuffle=True, stratify=None\n",
+    "    )\n",
+    "\n",
+    "X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchvision.datasets import VisionDataset\n",
+    "from torch.utils.data import Subset\n",
+    "import torch\n",
+    "\n",
+    "class MyDataset(VisionDataset):\n",
+    "    def __init__(self, root=\"\", transform=None, target_transform=None):\n",
+    "        super(MyDataset, self).__init__(root, transform=transform, target_transform=target_transform)\n",
+    "\n",
+    "        self.x = torch.rand(10)\n",
+    "        self.y = torch.randint(0, 3, (10,))\n",
+    "        \n",
+    "    def __getitem__(self, index):\n",
+    "        return self.x[index], self.y[index]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.x)\n",
+    "        \n",
+    "        \n",
+    "mydataset = MyDataset(\"\")\n",
+    "\n",
+    "subset = Subset(mydataset, list(range(5)))\n",
+    "\n",
+    "isinstance(mydataset, Subset)"
+   ]
   }
  ],
  "metadata": {
