bug fix in launch notebook

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -69,7 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd mlvm-project/data; sed -i 's/\\\\/\\//g' train.txt; sed -i 's/\\\\/\\//g' test.txt; sed -i 's/artist_dataset\\///g' train.txt; sed -i 's/artist_dataset\\///g' test.txt;"
+    "%cd mlvm-project/data\n",
+    "!sed -i 's/\\\\/\\//g' train.txt; sed -i 's/\\\\/\\//g' val.txt; sed -i 's/\\\\/\\//g' test.txt;\n",
+    "!sed -i 's/artist_dataset\\///g' train.txt; sed -i 's/artist_dataset\\///g' val.txt; sed -i 's/artist_dataset\\///g' test.txt;\n",
+    "%cd ../.."
    ]
   },
   {
