bug fix in launcher

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv mlvm-dataset mlvm-project/data"
+    "!mv mlvm-dataset/* mlvm-project/data"
    ]
   },
   {
