--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -81,6 +81,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!cd mlvm-project; rm temp/*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install torchmetrics"
    ]
   },
