updated mobilenet results

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -10416,6 +10416,90 @@
     "plt.bar(range(len(v[0])), v[0], width=0.5)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [1/20], Validation Loss: 1.8160, mIoU: 23.51%\n",
+      "Epoch: [2/20], Validation Loss: 2.0516, mIoU: 21.48%\n",
+      "Epoch: [3/20], Validation Loss: 2.5059, mIoU: 22.32%\n",
+      "Epoch: [4/20], Validation Loss: 1.7274, mIoU: 26.12%\n",
+      "Epoch: [5/20], Validation Loss: 1.9005, mIoU: 19.51%\n",
+      "Epoch: [6/20], Validation Loss: 1.9873, mIoU: 17.24%\n",
+      "Epoch: [7/20], Validation Loss: 1.7294, mIoU: 23.41%\n",
+      "Epoch: [8/20], Validation Loss: 1.8588, mIoU: 23.61%\n",
+      "Epoch: [9/20], Validation Loss: 1.6741, mIoU: 22.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"\"\"\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 1.7762666177749633, mIoU: 0.23859721422195435\n",
+    "Processed 50 batches: loss 1.8186339545249939, mIoU: 0.22922639548778534\n",
+    "Processed 75 batches: loss 1.8103870423634847, mIoU: 0.23448266088962555\n",
+    "Processed 100 batches: loss 1.8041630482673645, mIoU: 0.23582755029201508\n",
+    "Epoch: [1/20], Validation Loss: 1.8160, mIoU: 23.51%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 1.9858517932891846, mIoU: 0.23087041079998016\n",
+    "Processed 50 batches: loss 2.079498815536499, mIoU: 0.21276946365833282\n",
+    "Processed 75 batches: loss 2.0348230091730755, mIoU: 0.21697156131267548\n",
+    "Processed 100 batches: loss 2.0424960327148436, mIoU: 0.2167549431324005\n",
+    "Epoch: [2/20], Validation Loss: 2.0516, mIoU: 21.48%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 2.5564755725860597, mIoU: 0.2403295487165451\n",
+    "Processed 50 batches: loss 2.5987351965904235, mIoU: 0.22148479521274567\n",
+    "Processed 75 batches: loss 2.5062953742345173, mIoU: 0.2232857346534729\n",
+    "Processed 100 batches: loss 2.501150552034378, mIoU: 0.22317565977573395\n",
+    "Epoch: [3/20], Validation Loss: 2.5059, mIoU: 22.32%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 1.7046942687034607, mIoU: 0.26785099506378174\n",
+    "Processed 50 batches: loss 1.7649435317516327, mIoU: 0.2502310276031494\n",
+    "Processed 75 batches: loss 1.721175947189331, mIoU: 0.2608916163444519\n",
+    "Processed 100 batches: loss 1.7213750314712524, mIoU: 0.2619895040988922\n",
+    "Epoch: [4/20], Validation Loss: 1.7274, mIoU: 26.12%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 2.0357261276245118, mIoU: 0.1832776963710785\n",
+    "Processed 50 batches: loss 1.9587965488433838, mIoU: 0.18892359733581543\n",
+    "Processed 75 batches: loss 1.9288034709294637, mIoU: 0.19314314424991608\n",
+    "Processed 100 batches: loss 1.9177607882022858, mIoU: 0.19365061819553375\n",
+    "Epoch: [5/20], Validation Loss: 1.9005, mIoU: 19.51%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 2.0374346923828126, mIoU: 0.17064635455608368\n",
+    "Processed 50 batches: loss 2.0249682688713073, mIoU: 0.16737839579582214\n",
+    "Processed 75 batches: loss 1.9952565224965413, mIoU: 0.16943545639514923\n",
+    "Processed 100 batches: loss 1.9934006488323213, mIoU: 0.17010805010795593\n",
+    "Epoch: [6/20], Validation Loss: 1.9873, mIoU: 17.24%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 1.7116975593566894, mIoU: 0.23244920372962952\n",
+    "Processed 50 batches: loss 1.791217291355133, mIoU: 0.21916474401950836\n",
+    "Processed 75 batches: loss 1.7339028930664062, mIoU: 0.23144228756427765\n",
+    "Processed 100 batches: loss 1.7235983216762543, mIoU: 0.23464785516262054\n",
+    "Epoch: [7/20], Validation Loss: 1.7294, mIoU: 23.41%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 1.8429637718200684, mIoU: 0.2421848177909851\n",
+    "Processed 50 batches: loss 1.8897745490074158, mIoU: 0.23160268366336823\n",
+    "Processed 75 batches: loss 1.8531674480438232, mIoU: 0.23870740830898285\n",
+    "Processed 100 batches: loss 1.8454604160785675, mIoU: 0.2383759766817093\n",
+    "Epoch: [8/20], Validation Loss: 1.8588, mIoU: 23.61%\n",
+    "### Evaluation mode\n",
+    "Processed 25 batches: loss 1.6039345693588256, mIoU: 0.24330134689807892\n",
+    "Processed 50 batches: loss 1.695465269088745, mIoU: 0.22754332423210144\n",
+    "Processed 75 batches: loss 1.668627627690633, mIoU: 0.2288791686296463\n",
+    "Processed 100 batches: loss 1.6690774881839752, mIoU: 0.22907023131847382\n",
+    "Epoch: [9/20], Validation Loss: 1.6741, mIoU: 22.93%\n",
+    "\"\"\"\n",
+    "\n",
+    "for line in s.split(\"\\n\"):\n",
+    "    if \"Epoch\" in line:\n",
+    "        loss, miou = line.split(\":\")[1].split(\",\"), line.split(\":\")[2]"
+   ]
   }
  ],
  "metadata": {
