updated launch notebook, cleanup

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Launch job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Environment setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Git setup\n",
+    "Optimize clone of large repo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -13,6 +35,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Google Drive setup\n",
+    "Mount drive in runtime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,6 +50,38 @@
    "source": [
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python setup\n",
+    "Install missing packages in runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torchmetrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset and code preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset cloning\n",
+    "Get dataset from Github repo"
    ]
   },
   {
@@ -35,6 +97,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code cloning\n",
+    "Get code from Github repo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -46,12 +116,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!mv mlvm-dataset/* mlvm-project/data"
+    "### Dataset preprocessing"
    ]
   },
   {
@@ -60,6 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!mv mlvm-dataset/* mlvm-project/data\n",
     "!ls -la mlvm-project/data"
    ]
   },
@@ -76,12 +145,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!pip install torchmetrics"
+    "### Cache cleaning\n",
+    "Clean local cache folder between multiple runs"
    ]
   },
   {
@@ -94,12 +162,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use Unix-like CLI commands to run the job with custom parameters.  \n",
+    "Choose --help for a brief guide.  \n",
+    "Default params are stored in [config](/mlvm-project/src/config/components.py)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd mlvm-project; chmod u+x main.py; python main.py data/artist_dataset"
+    "!cd mlvm-project; chmod u+x main.py; python main.py --root data/artist_dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cached results are moved to official folder, then saved in a homonymous one on Drive."
    ]
   },
   {
