bug fix (parser)

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -178,12 +178,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample run template"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd mlvm-project; chmod u+x main.py; python main.py --root data/artist_dataset"
+    "\"\"\"\n",
+    "%cd mlvm-project\n",
+    "!chmod u+x main.py;\n",
+    "!python main.py \\\n",
+    "    --root ./data/artist_dataset \\\n",
+    "    --trained_model_path ... \\\n",
+    "    --resume_training \\\n",
+    "    --batch-size ... \\\n",
+    "    --reduce-factor ... \\\n",
+    "    --augment \\\n",
+    "    --num-epochs ... \\\n",
+    "    --train-log-frequency ... \\\n",
+    "    --val-log-frequency ... \\\n",
+    "    --lr ... \\\n",
+    "    --momentum ... \\\n",
+    "    --wd ... \\\n",
+    "    --scheduler \\\n",
+    "    --scheduler-milestones ... ... ... \\\n",
+    "    --scheduler-factors ... ... ... \\\n",
+    "    --save-models \\\n",
+    "    --save-models-step ... \\\n",
+    "    --inference-only ... \\\n",
+    "    --backbone-type ... \\\n",
+    "    --use-handcrafted ;\n",
+    "%cd ..\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run job\n",
+    "Change the params basing on customization needs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd mlvm-project\n",
+    "!chmod u+x main.py;\n",
+    "!python main.py \\\n",
+    "    --root ./data/artist_dataset \\\n",
+    "    --trained_model_path ... \\\n",
+    "    --resume_training \\\n",
+    "    --augment \\\n",
+    "    --num-epochs ... \\\n",
+    "    --lr ... \\\n",
+    "    --wd ... \\\n",
+    "    --scheduler custom_step_lr \\\n",
+    "    --scheduler-milestones 10 15 20 \\\n",
+    "    --scheduler-factors 0.5 0.5 0.25 \\\n",
+    "    --use-handcrafted ;\n",
+    "%cd .."
    ]
   },
   {
