fix launch notebook

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -205,7 +205,7 @@
     "    --val-log-frequency ... \\\n",
     "    --lr ... \\\n",
     "    --momentum ... \\\n",
-    "    --wd ... \\\n",
+    "    --weight-decay ... \\\n",
     "    --scheduler \\\n",
     "    --scheduler-milestones ... ... ... \\\n",
     "    --scheduler-factors ... ... ... \\\n",
@@ -241,7 +241,7 @@
     "    --augment \\\n",
     "    --num-epochs ... \\\n",
     "    --lr ... \\\n",
-    "    --wd ... \\\n",
+    "    --weight-decay ... \\\n",
     "    --scheduler custom_step_lr \\\n",
     "    --scheduler-milestones 10 15 20 \\\n",
     "    --scheduler-factors 0.5 0.5 0.25 \\\n",
