--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -195,8 +195,8 @@
     "!chmod u+x main.py;\n",
     "!python main.py \\\n",
     "    --root ./data/artist_dataset \\\n",
-    "    --trained_model_path ... \\\n",
-    "    --resume_training \\\n",
+    "    --trained-model-path ... \\\n",
+    "    --resume-training \\\n",
     "    --batch-size ... \\\n",
     "    --reduce-factor ... \\\n",
     "    --augment \\\n",
@@ -236,8 +236,8 @@
     "!chmod u+x main.py;\n",
     "!python main.py \\\n",
     "    --root ./data/artist_dataset \\\n",
-    "    --trained_model_path ... \\\n",
-    "    --resume_training \\\n",
+    "    --trained-model-path ... \\\n",
+    "    --resume-training \\\n",
     "    --augment \\\n",
     "    --num-epochs ... \\\n",
     "    --lr ... \\\n",
