colab/kaggle notebooks update

--- a/colab/launch.ipynb
+++ b/colab/launch.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Launch job"
+    "# Launch job\n",
+    "Main notebook of the project, used to launch training or evaluation jobs on Colab."
    ]
   },
   {
@@ -90,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/MicheleCazzola/mlvm-dataset --depth=1 mlvm-dataset --progress --verbose\n",
+    "!git clone https://github.com/MicheleCazzola/artist-identification-dataset --depth=1 mlvm-dataset --progress --verbose\n",
     "!cd mlvm-dataset; git pull --all\n",
     "\n",
     "!cd mlvm-dataset; git status"
@@ -110,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://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@github.com/MicheleCazzola/mvlm-project.git mlvm-project\n",
+    "!git clone https://github.com/MicheleCazzola/artist-identification.git mlvm-project\n",
     "\n",
     "!cd mlvm-project; git status"
    ]
