--- a/colab/resources.ipynb
+++ b/colab/resources.ipynb
@@ -1,187 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'mlvm-project'...\n",
-      "POST git-upload-pack (185 bytes)\n",
-      "POST git-upload-pack (239 bytes)\n",
-      "remote: Enumerating objects: 41, done.        \n",
-      "remote: Counting objects:   2% (1/41)        \n",
-      "remote: Counting objects:   4% (2/41)        \n",
-      "remote: Counting objects:   7% (3/41)        \n",
-      "remote: Counting objects:   9% (4/41)        \n",
-      "remote: Counting objects:  12% (5/41)        \n",
-      "remote: Counting objects:  14% (6/41)        \n",
-      "remote: Counting objects:  17% (7/41)        \n",
-      "remote: Counting objects:  19% (8/41)        \n",
-      "remote: Counting objects:  21% (9/41)        \n",
-      "remote: Counting objects:  24% (10/41)        \n",
-      "remote: Counting objects:  26% (11/41)        \n",
-      "remote: Counting objects:  29% (12/41)        \n",
-      "remote: Counting objects:  31% (13/41)        \n",
-      "remote: Counting objects:  34% (14/41)        \n",
-      "remote: Counting objects:  36% (15/41)        \n",
-      "remote: Counting objects:  39% (16/41)        \n",
-      "remote: Counting objects:  41% (17/41)        \n",
-      "remote: Counting objects:  43% (18/41)        \n",
-      "remote: Counting objects:  46% (19/41)        \n",
-      "remote: Counting objects:  48% (20/41)        \n",
-      "remote: Counting objects:  51% (21/41)        \n",
-      "remote: Counting objects:  53% (22/41)        \n",
-      "remote: Counting objects:  56% (23/41)        \n",
-      "remote: Counting objects:  58% (24/41)        \n",
-      "remote: Counting objects:  60% (25/41)        \n",
-      "remote: Counting objects:  63% (26/41)        \n",
-      "remote: Counting objects:  65% (27/41)        \n",
-      "remote: Counting objects:  68% (28/41)        \n",
-      "remote: Counting objects:  70% (29/41)        \n",
-      "remote: Counting objects:  73% (30/41)        \n",
-      "remote: Counting objects:  75% (31/41)        \n",
-      "remote: Counting objects:  78% (32/41)        \n",
-      "remote: Counting objects:  80% (33/41)        \n",
-      "remote: Counting objects:  82% (34/41)        \n",
-      "remote: Counting objects:  85% (35/41)        \n",
-      "remote: Counting objects:  87% (36/41)        \n",
-      "remote: Counting objects:  90% (37/41)        \n",
-      "remote: Counting objects:  92% (38/41)        \n",
-      "remote: Counting objects:  95% (39/41)        \n",
-      "remote: Counting objects:  97% (40/41)        \n",
-      "remote: Counting objects: 100% (41/41)        \n",
-      "remote: Counting objects: 100% (41/41), done.        \n",
-      "remote: Compressing objects:   3% (1/33)        \n",
-      "remote: Compressing objects:   6% (2/33)        \n",
-      "remote: Compressing objects:   9% (3/33)        \n",
-      "remote: Compressing objects:  12% (4/33)        \n",
-      "remote: Compressing objects:  15% (5/33)        \n",
-      "remote: Compressing objects:  18% (6/33)        \n",
-      "remote: Compressing objects:  21% (7/33)        \n",
-      "remote: Compressing objects:  24% (8/33)        \n",
-      "remote: Compressing objects:  27% (9/33)        \n",
-      "remote: Compressing objects:  30% (10/33)        \n",
-      "remote: Compressing objects:  33% (11/33)        \n",
-      "remote: Compressing objects:  36% (12/33)        \n",
-      "remote: Compressing objects:  39% (13/33)        \n",
-      "remote: Compressing objects:  42% (14/33)        \n",
-      "remote: Compressing objects:  45% (15/33)        \n",
-      "remote: Compressing objects:  48% (16/33)        \n",
-      "remote: Compressing objects:  51% (17/33)        \n",
-      "remote: Compressing objects:  54% (18/33)        \n",
-      "remote: Compressing objects:  57% (19/33)        \n",
-      "remote: Compressing objects:  60% (20/33)        \n",
-      "remote: Compressing objects:  63% (21/33)        \n",
-      "remote: Compressing objects:  66% (22/33)        \n",
-      "remote: Compressing objects:  69% (23/33)        \n",
-      "remote: Compressing objects:  72% (24/33)        \n",
-      "remote: Compressing objects:  75% (25/33)        \n",
-      "remote: Compressing objects:  78% (26/33)        \n",
-      "remote: Compressing objects:  81% (27/33)        \n",
-      "remote: Compressing objects:  84% (28/33)        \n",
-      "remote: Compressing objects:  87% (29/33)        \n",
-      "remote: Compressing objects:  90% (30/33)        \n",
-      "remote: Compressing objects:  93% (31/33)        \n",
-      "remote: Compressing objects:  96% (32/33)        \n",
-      "remote: Compressing objects: 100% (33/33)        \n",
-      "remote: Compressing objects: 100% (33/33), done.        \n",
-      "Receiving objects:   2% (1/41)\n",
-      "Receiving objects:   4% (2/41)\n",
-      "Receiving objects:   7% (3/41)\n",
-      "Receiving objects:   9% (4/41)\n",
-      "Receiving objects:  12% (5/41)\n",
-      "Receiving objects:  14% (6/41)\n",
-      "Receiving objects:  17% (7/41)\n",
-      "Receiving objects:  19% (8/41)\n",
-      "Receiving objects:  21% (9/41)\n",
-      "Receiving objects:  24% (10/41)\n",
-      "Receiving objects:  26% (11/41)\n",
-      "Receiving objects:  29% (12/41)\n",
-      "Receiving objects:  31% (13/41)\n",
-      "Receiving objects:  34% (14/41)\n",
-      "Receiving objects:  36% (15/41)\n",
-      "Receiving objects:  39% (16/41)\n",
-      "Receiving objects:  41% (17/41)\n",
-      "Receiving objects:  43% (18/41)\n",
-      "Receiving objects:  46% (19/41)\n",
-      "Receiving objects:  48% (20/41)\n",
-      "Receiving objects:  51% (21/41)\n",
-      "Receiving objects:  53% (22/41)\n",
-      "Receiving objects:  56% (23/41)\n",
-      "Receiving objects:  58% (24/41)\n",
-      "Receiving objects:  60% (25/41)\n",
-      "Receiving objects:  63% (26/41)\n",
-      "Receiving objects:  65% (27/41)\n",
-      "Receiving objects:  68% (28/41)\n",
-      "Receiving objects:  70% (29/41)\n",
-      "Receiving objects:  73% (30/41)\n",
-      "Receiving objects:  75% (31/41)\n",
-      "remote: Total 41 (delta 6), reused 22 (delta 4), pack-reused 0 (from 0)        \n",
-      "Receiving objects:  78% (32/41)\n",
-      "Receiving objects:  80% (33/41)\n",
-      "Receiving objects:  82% (34/41)\n",
-      "Receiving objects:  85% (35/41)\n",
-      "Receiving objects:  87% (36/41)\n",
-      "Receiving objects:  90% (37/41)\n",
-      "Receiving objects:  92% (38/41)\n",
-      "Receiving objects:  95% (39/41)\n",
-      "Receiving objects:  97% (40/41)\n",
-      "Receiving objects: 100% (41/41)\n",
-      "Receiving objects: 100% (41/41), 67.38 KiB | 5.61 MiB/s, done.\n",
-      "Resolving deltas:   0% (0/6)\n",
-      "Resolving deltas:  16% (1/6)\n",
-      "Resolving deltas:  33% (2/6)\n",
-      "Resolving deltas:  50% (3/6)\n",
-      "Resolving deltas:  66% (4/6)\n",
-      "Resolving deltas:  83% (5/6)\n",
-      "Resolving deltas: 100% (6/6)\n",
-      "Resolving deltas: 100% (6/6), done.\n",
-      "Impossibile trovare il percorso specificato.\n",
-      "Impossibile trovare il percorso specificato.\n"
-     ]
-    }
-   ],
    "source": [
-    "!git clone https://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@github.com/MicheleCazzola/mlvm-project.git mlvm-project --depth=1 --progress --verbose\n",
+    "# Resource estimation\n",
+    "Compute latency for each model, with HOG dimensionality variation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code clone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/MicheleCazzola/artist-identification.git mlvm-project --depth=1 --progress --verbose\n",
     "!cd mlvm-project; git pull --all\n",
     "\n",
     "!cd mlvm-project; git status "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mv: cannot stat 'mlmv-project/script/times/times.py': No such file or directory\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!mv mlvm-project/scripts/resources/resources.py mlvm-project"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Impossibile trovare il percorso specificato.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cd mlvm-project; chmod u+x resources.py; python resources.py"
    ]
